<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Bluetooth button (separate, not draggable) -->

    <!-- Draggable message box -->

    <Button
        android:id="@+id/bluetoothUIButton"
        android:layout_width="198dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/connect_to_a_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:layout_editor_absoluteX="962dp"
        tools:layout_editor_absoluteY="54dp"
        app:layout_constraintTop_toBottomOf="@id/bluetoothUIButton"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text="@string/not_connected"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/messageInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_message"
                android:inputType="text"
                android:padding="8dp" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/send" />
        </LinearLayout>

        <TextView
            android:id="@+id/receivedMsgLabel"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/received_messages" />

        <ScrollView
            android:id="@+id/msgScroll"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fillViewport="true">

            <TextView
                android:id="@+id/msgTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:scrollbars="vertical"/>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
